[gd_scene load_steps=2 format=3 uid="uid://ui_building_panel_001"]

[ext_resource type="Script" path="res://scripts/ui/building_panel.gd" id="1_panel"]

[node name="BuildingPanel" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
alignment = 2

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 1
alignment = 1

[node name="ToggleButton" type="Button" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "â–¼ Bauen"

[node name="PointsLabel" type="Label" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "ðŸ“š 50"

[node name="Panel" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="Margin" type="MarginContainer" parent="VBox/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BuildingContainer" type="HBoxContainer" parent="VBox/Panel/Margin"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="TooltipPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -200.0
offset_right = 120.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0

[node name="Margin" type="MarginContainer" parent="TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="TooltipPanel/Margin"]
layout_mode = 2

[node name="TooltipName" type="Label" parent="TooltipPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "GebÃ¤udename"
horizontal_alignment = 1

[node name="TooltipDesc" type="Label" parent="TooltipPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Beschreibung"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TooltipCost" type="Label" parent="TooltipPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Kosten: 10 ðŸ“š"
horizontal_alignment = 1

[node name="TooltipUnlock" type="Label" parent="TooltipPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "ðŸ”’ 0/5 Fragen"
horizontal_alignment = 1

